--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     list-style-type: none;
   } 
   .logo{
-    width:10%;
+    width:8%;
   
     
   }
@@ -13,11 +13,26 @@
 
   .ultag{
     width:65%;
-  
+    font-weight:bold;
   }
+  body{
+    background-image: url("./images/hero/hero-bg.png");
+    background-repeat: no-repeat;
+    background-position: right top;
+  }
+
+  p {
+    color: #8e8e8e;
+  }
+  
   .navbtn{
     width:20%;
-    
+    font-weight: bold;
+ 
+  }
+  .text_center
+  {
+    text-align: center;
   }
   .navbtn button:first-child
   {
@@ -27,24 +42,30 @@
     background-color:red;
     border:none;
     padding:10px;
+    width:110px;
+    border-radius: 2px;;
+    color:white;
 
   } 
   .ultag ul{
     gap:10px
   }
-  .center_image{
-    border: none;
-    outline: none;
+  .car-image{
+   margin-left:-200px;
+   margin-top:24px;
   }
   .register_btn button:first-child
   {
-    background-color: red;
-    color:white;
-    padding-right:40px;
+    padding: 15px;
+    border: none;
+    background: #ff4b30;
+    color: white;
   }
   .register_btn button:nth-child(2){
-    background-color:black;
-    color:white;
+    padding: 15px;
+    border: none;
+    background: black;
+    color: white;
  }
  .color {
   color: red;
@@ -69,9 +90,6 @@
 .rental_fleet{
     display: flex;
     justify-content: center; 
-}
-.align_heading{
-   padding-left:50px;
 }
 
 .title_table > tr > th {
